--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
-							<skip>true</skip>
+							<testFailureIgnore>true</testFailureIgnore>
 						</configuration>
 					</plugin>
 
